# QuShield-PnB

./: .dockerignore  .env.example  .gitignore  =0.13.0  PROMPT.md  PROMPT2.md  PROMPT3.md  README.md  TESTING_RESULTS.md  docker-compose.local.yml  docker-compose.yml  qushield.csv  update_db.py
backend/: .dockerignore  Dockerfile  apply_performance_indexes.py  check_results.py  pyproject.toml  requirements.txt  update_db.py
backend/app/: config.py  main.py
backend/app/core/: database.py  exceptions.py  logging.py  timing.py  utils.py
backend/app/data/: ca_pqc_readiness.json  data_shelf_life_defaults.json  nist_quantum_levels.json  pqc_oids.json  regulatory_deadlines.json  vendor_readiness.json
backend/app/models/: __init__.py  asset.py  auth.py  cbom.py  certificate.py  compliance.py  generated_report.py  geo.py  report.py  risk.py  scan.py  tls_inspection.py
backend/app/schemas/: asset.py  cbom.py  compliance.py  risk.py  scan.py
backend/app/services/: ai_service.py  asset_manager.py  auth_service.py  cbom_builder.py  chart_generator.py  compliance.py  crypto_inspector.py  crypto_inspector.py.bak  csv_enrichment.py  discovery_runner.py  embedding_service.py  geo_service.py  graph_builder.py  incremental.py  knowledge_seeder.py  monte_carlo.py  orchestrator.py  pqcscan_client.py  quick_scanner.py  (+12 more)
backend/discovery/: go.mod  main.go
backend/scripts/: clear_db.py  init_ollama.sh  setup_superadmin.py
backend/tests/: conftest.py  test_anonymous_access.py  test_auth_service.py  test_incremental.py  test_phase9_e2e.py  test_scan_cache.py  test_user_isolation.py
(+912 files in other folders)
