[project]
name = "qushield-pnb"
version = "0.1.0"
description = "Quantum-Safe Banking Infrastructure Scanner — Post-Quantum Cryptographic Bill of Materials"
requires-python = ">=3.12"
license = {text = "Proprietary"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"
